--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -2,7 +2,7 @@ name: Generate Snake Animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"  # every day at midnight
+    - cron: "0 0 * * *"  # runs daily at midnight
   workflow_dispatch:
 
 jobs:
@@ -14,7 +14,6 @@ jobs:
           github_user_name: NinjaVinja
           outputs: |
             dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
       - name: Push to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
